# Game-Speed-Boost

./: .gitignore  HARDWARE_OPTIMIZATION_REPORT.md  README.md  TITAN_CORE_REPORT.md  TITAN_PHASE2_REPORT.md  metadata.json  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/profiles/: genshin_impact.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/core/: titan_jni.cpp  titan_scanner.cpp  titan_scanner.h
app/src/main/java/com/example/: MainActivity.kt
app/src/main/java/com/example/data/: AppDatabase.kt  BoostLog.kt  BoosterDao.kt  BoosterRepository.kt  UserGame.kt
app/src/main/java/com/example/engine/: GameAdaptiveEngine.kt  StateBackupManager.kt
app/src/main/java/com/example/service/: GameBoosterService.kt
app/src/main/java/com/example/ui/theme/: Color.kt  Theme.kt
app/src/main/java/com/example/util/: DeviceProfiler.kt  ShizukuManager.kt  ShizukuProcessHelper.java  SystemMetrics.kt
app/src/main/java/com/example/viewmodel/: BoosterViewModel.kt
app/src/main/java/com/titan/core/: HardwareLimits.kt  HardwareSnapshot.kt  TitanCore.kt  TitanError.kt
app/src/main/java/com/titan/core/model/: TitanError.kt
app/src/main/java/com/titan/engine/models/: GameProfile.kt
app/src/main/java/com/titan/engine/rules/: RuleEngine.kt
app/src/main/java/com/titan/hal/: TitanHalBridge.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/data/: BoosterRepositoryTest.kt
app/src/test/java/com/example/util/: ShizukuManagerTest.kt  SystemMetricsTest.kt
gradle/: libs.versions.toml
